docker compose commands for building apps. makefile scripts for building and installing api client. ts nextjs configuration. test setup. test libraries added.
