# TodoAPI/Models/TodoItemModel.cs
@@ -1,8 +1,9 @@
 namespace TodoAPI.Models;
 
-public class TodoItem
+public class TodoItemModel
 {
     public long Id { get; set; }
     public string? Name { get; set; }
     public bool IsComplete { get; set; }
+    public string? Author { get; set; }
 }
