# frontends/nextjs/todo-app/ts-api/models/index.ts
@@ -1,3 +1,4 @@
 /* tslint:disable */
 /* eslint-disable */
 export * from './TodoItem';
+export * from './TodoItemModel';
